fix java example